tests/characterization/snapshots/characterization__representative_errors__unknown_cloud_local_command.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
--- stderr ---
Error: unknown cloud-local command: unknown
--- end ---
