tests/characterization/snapshots/characterization__representative_errors__unsupported_completion_shell.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 1)"
---
exit: 1
--- stdout ---
--- stderr ---
Error: unsupported shell: powershell
--- end ---
